I added a Vecta Corp.html page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-This is my new site.
-I think i will be having a good time here.
+<!DOCTYPE html>
+
+<html>
+    <body>
+        This is my new site.
+I think i will be having a good time here.</body>
+    
+</html>
+
